--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.0.10",
+    "@aws-amplify/ui-react": "^6.1.0",
     "aws-amplify": "^6.0.10",
     "next": "14.0.4",
     "react": "^18",
