--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -38,7 +38,7 @@
         ],
         "passwordProtectionSettings": {
           "passwordPolicyCharacters": [],
-          "passwordPolicyMinLength": 8
+          "passwordPolicyMinLength": "6"
         },
         "signupAttributes": [
           "EMAIL"
